# study-c

./: .gitignore  README.md
cmake/: README.md
cmake/how_to_use/: README.md
cmake/how_to_use/1.1.hello/: CMakeLists.txt
cmake/how_to_use/2.1.static.lib/: CMakeLists.txt
cmake/how_to_use/2.2.shared.lib/: CMakeLists.txt  build.sh
cmake/how_to_use/2.3.switch.lib/: CMakeLists.txt  build.shared.sh
cmake/how_to_use/2.4.switch.option.lib/: CMakeLists.txt  build.shared.sh  build.static.sh
cmake/how_to_use/3.1.src.include/test/: CMakeLists.txt
cmake/how_to_use/4.1.compile.option/: clean.sh
cmake/how_to_use/4.1.compile.option/test/: CMakeLists.txt
cmake/how_to_use/5.1.build.type/: CMakeLists.txt  build.sh
cmake/how_to_use/5.1.build.type/test/: main.cpp
cmake/how_to_use/6.1.generator.expressions/: CMakeLists.txt  build.debug.sh
cmake/how_to_use/6.1.generator.expressions/src/: CMakeLists.txt
cmake/how_to_use/6.1.generator.expressions/test/: CMakeLists.txt
cmake/how_to_use/6.2.MAKE_EXPORT_COMPILE_COMMANDS/: CMakeLists.txt  build.debug.sh  build.release.sh
example/: bswap_double.c
example/alingment/: Makefile  mytest.c
example/bit-ope/: Makefile  bit-ope1.c
example/chk-data-size/: Makefile  chkdatasize.c
example/clang.ast/: Makefile  test.h
example/define/: deftest.c  test.c
example/iconv/: Makefile  runtest  test.c  test.out.sjis  test2.c  test3.c
example/mem_alloc/memalloc/: Makefile  memalloc.c
example/multiple_definition/: Makefile  main.c  sub.c  sub2.c
example/net-read/: test.c
example/proc/hello/: Makefile  hello.pc
example/pthread/: Makefile  sample_pthread_attr_setschedparam.c
example/semaphore/: semaphore.c
example/sharedmemory/: Makefile  bc2dec  bc2hex  shmem.c
example/signal/: Makefile  signal_handler.c
example/socket/: Makefile  PACK.txt  client.c  printip.c  printip_error.c  server.c
example/socket/connect_timeout/: Makefile  README.md  TEST.sh  connect_timeout.c  main.c
example/struct-align/: Makefile  test.c
example/time_localtime/: Makefile  test.c
example/va_list_start_end/: Makefile  test.c
example/wrapper/warp_std_header/: Makefile  test1.c  test4.c  test5.c  wrapper_w_sysh.h
example/wrapper/warp_std_header/backup/: test1ng.c  test2.c  test3.c  wrapper.h  wrapper_w_sysh.h
make/: Makefile  run_SILENT.sh  t.c
